compiler/lume_hir/src/snapshots/lume_hir__lower__tests__range_snapshots@literal_inclusive.snap
---
source: compiler/lume_hir/src/lower.rs
description: let _ = (0..=1);
---
[
    Statement {
        id: 0,
        kind: Variable(
            VariableDeclaration {
                id: 0,
                name: Identifier {
                    name: "_",
                    location: <internal>:4:5,
                },
                declared_type: None,
                value: Expression {
                    id: 5871781006564002453,
                    location: <internal>:9:14,
                    kind: StaticCall(
                        StaticCall {
                            id: 5871781006564002453,
                            name: std::new::RangeInclusive,
                            type_arguments: [
                                Implicit {
                                    location: <internal>:0:0,
                                },
                            ],
                            arguments: [
                                Expression {
                                    id: 11743562013128004906,
                                    location: <internal>:9:10,
                                    kind: Literal(
                                        Literal {
                                            id: 11743562013128004906,
                                            location: <internal>:9:10,
                                            kind: Int(
                                                IntLiteral {
                                                    id: 11743562013128004906,
                                                    value: 0,
                                                    kind: I32,
                                                },
                                            ),
                                        },
                                    ),
                                },
                                Expression {
                                    id: 17615343019692007359,
                                    location: <internal>:13:14,
                                    kind: Literal(
                                        Literal {
                                            id: 17615343019692007359,
                                            location: <internal>:13:14,
                                            kind: Int(
                                                IntLiteral {
                                                    id: 17615343019692007359,
                                                    value: 1,
                                                    kind: I32,
                                                },
                                            ),
                                        },
                                    ),
                                },
                            ],
                        },
                    ),
                },
            },
        ),
        location: <internal>:0:16,
    },
]
