compiler/lume_hir/src/snapshots/lume_hir__lower__tests__return_snapshots@call.snap
---
source: compiler/lume_hir/src/lower.rs
description: "\n            let a = 1;\n            let b = 1;\n            let c = 1;\n\n            return a.b(c);"
---
[
    Statement {
        id: 0,
        kind: Variable(
            VariableDeclaration {
                id: 0,
                name: Identifier {
                    name: "a",
                    location: <internal>:17:18,
                },
                declared_type: None,
                value: Expression {
                    id: 5871781006564002453,
                    location: <internal>:21:22,
                    kind: Literal(
                        Literal {
                            id: 5871781006564002453,
                            location: <internal>:21:22,
                            kind: Int(
                                IntLiteral {
                                    id: 5871781006564002453,
                                    value: 1,
                                    kind: I32,
                                },
                            ),
                        },
                    ),
                },
            },
        ),
        location: <internal>:13:23,
    },
    Statement {
        id: 11743562013128004906,
        kind: Variable(
            VariableDeclaration {
                id: 11743562013128004906,
                name: Identifier {
                    name: "b",
                    location: <internal>:40:41,
                },
                declared_type: None,
                value: Expression {
                    id: 17615343019692007359,
                    location: <internal>:44:45,
                    kind: Literal(
                        Literal {
                            id: 17615343019692007359,
                            location: <internal>:44:45,
                            kind: Int(
                                IntLiteral {
                                    id: 17615343019692007359,
                                    value: 1,
                                    kind: I32,
                                },
                            ),
                        },
                    ),
                },
            },
        ),
        location: <internal>:36:46,
    },
    Statement {
        id: 5040379952546458196,
        kind: Variable(
            VariableDeclaration {
                id: 5040379952546458196,
                name: Identifier {
                    name: "c",
                    location: <internal>:63:64,
                },
                declared_type: None,
                value: Expression {
                    id: 10912160959110460649,
                    location: <internal>:67:68,
                    kind: Literal(
                        Literal {
                            id: 10912160959110460649,
                            location: <internal>:67:68,
                            kind: Int(
                                IntLiteral {
                                    id: 10912160959110460649,
                                    value: 1,
                                    kind: I32,
                                },
                            ),
                        },
                    ),
                },
            },
        ),
        location: <internal>:59:69,
    },
    Statement {
        id: 16783941965674463102,
        kind: Return(
            Return {
                id: 16783941965674463102,
                value: Some(
                    Expression {
                        id: 4208978898528913939,
                        location: <internal>:92:97,
                        kind: InstanceCall(
                            InstanceCall {
                                id: 4208978898528913939,
                                callee: Expression {
                                    id: 15952540911656918845,
                                    location: <internal>:90:91,
                                    kind: Variable(
                                        Variable {
                                            id: 15952540911656918845,
                                            reference: 0,
                                            name: Identifier {
                                                name: "a",
                                                location: <internal>:90:91,
                                            },
                                            location: <internal>:90:91,
                                        },
                                    ),
                                },
                                name: Identifier {
                                    name: "b",
                                    location: <internal>:92:93,
                                },
                                type_arguments: [],
                                arguments: [
                                    Expression {
                                        id: 10080759905092916392,
                                        location: <internal>:94:95,
                                        kind: Variable(
                                            Variable {
                                                id: 10080759905092916392,
                                                reference: 5040379952546458196,
                                                name: Identifier {
                                                    name: "c",
                                                    location: <internal>:94:95,
                                                },
                                                location: <internal>:94:95,
                                            },
                                        ),
                                    },
                                ],
                            },
                        ),
                    },
                ),
            },
        ),
        location: <internal>:83:97,
    },
]
