compiler/lume_hir/src/snapshots/lume_hir__lower__tests__return_snapshots@scalar.snap
---
source: compiler/lume_hir/src/lower.rs
expression: "lower_expr(\"return 1;\").unwrap()"
---
Map {
    package: PackageId(
        0,
    ),
    items: {
        8195533856448846917: Function(
            FunctionDefinition {
                id: 8195533856448846917,
                func_id: None,
                visibility: Private,
                name: foo,
                parameters: [],
                type_parameters: [],
                return_type: Some(
                    Type {
                        name: void,
                        type_params: [],
                        location: <internal>:12:16,
                    },
                ),
                block: Block {
                    statements: [
                        Statement {
                            id: 0,
                            kind: Return(
                                Return {
                                    id: 0,
                                    value: Some(
                                        Expression {
                                            id: 5871781006564002453,
                                            location: <internal>:26:27,
                                            kind: Literal(
                                                Literal {
                                                    id: 5871781006564002453,
                                                    location: <internal>:26:27,
                                                    kind: Int(
                                                        IntLiteral {
                                                            id: 5871781006564002453,
                                                            value: 1,
                                                            kind: I32,
                                                        },
                                                    ),
                                                },
                                            ),
                                        },
                                    ),
                                },
                            ),
                            location: <internal>:19:28,
                        },
                    ],
                    location: <internal>:17:30,
                },
                location: <internal>:0:30,
            },
        ),
    },
    statements: {
        0: Statement {
            id: 0,
            kind: Return(
                Return {
                    id: 0,
                    value: Some(
                        Expression {
                            id: 5871781006564002453,
                            location: <internal>:26:27,
                            kind: Literal(
                                Literal {
                                    id: 5871781006564002453,
                                    location: <internal>:26:27,
                                    kind: Int(
                                        IntLiteral {
                                            id: 5871781006564002453,
                                            value: 1,
                                            kind: I32,
                                        },
                                    ),
                                },
                            ),
                        },
                    ),
                },
            ),
            location: <internal>:19:28,
        },
    },
    expressions: {
        5871781006564002453: Expression {
            id: 5871781006564002453,
            location: <internal>:26:27,
            kind: Literal(
                Literal {
                    id: 5871781006564002453,
                    location: <internal>:26:27,
                    kind: Int(
                        IntLiteral {
                            id: 5871781006564002453,
                            value: 1,
                            kind: I32,
                        },
                    ),
                },
            ),
        },
    },
}
