compiler/lume_hir/src/snapshots/lume_hir__lower__tests__struct_snapshots@empty_decl.snap
---
source: compiler/lume_hir/src/lower.rs
description: "struct Int32 {}"
---
Map {
    package: PackageId(
        0,
    ),
    items: {
        15249499769657949080: Type(
            Struct(
                StructDefinition {
                    id: 15249499769657949080,
                    type_id: None,
                    name: Int32,
                    properties: [],
                    methods: [],
                    type_parameters: [],
                    location: <internal>:0:15,
                },
            ),
        ),
    },
    statements: {},
    expressions: {},
}
